fix: on single post page, post title going out of container instead of showing ... with title name

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -213,10 +213,13 @@ a {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: 100%;
 }
 
 .singleHeadTitle {
   font-size: 48px;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 .singleHeadDesc {
